# AI_Image_cutout_maker

./: .beamignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  app.py  cutoutHandler.py  docker-compose.yml  get_all_cutouts.ipynb  get_cutouts_by_prompt.ipynb  pyproject.toml  requirements.txt  run.py  s3FileHandler.py  test.ipynb
.github/workflows/: ci-cd.yml
Terraform/: backend.tf  s3.tf
app/: __init__.py  cutout.py  dino.py  dummy_modal.py  grounded_cutouts.py  s3_handler.py  segment.py
app/aws/: __init__.py  app.py
app/common/: __init__.py
app/cpu_cutout_handler/: __init__.py  app.py  dino.py  grounded_cutouts.py  segment.py
app/cutout_handler/: __init__.py  dino.py  grounded_cutouts.py  s3_handler.py  segment.py  server.py
app/s3/: __init__.py  app.py
app/s3_handler/: __init__.py  app.py  s3_handler.py
cutout_generator-2358074483/: app.py
grounded_segment/: cutout.py  dino.py  grounded_cutouts.py  s3_handler.py
legacy_code/: cutouts.py
